@@ -1,6 +1,7 @@
 <window>
     <defaultcontrol always="true">300</defaultcontrol>
     <onunload condition="IsEmpty(Window(virtualkeyboard).Property(Clear))">ClearProperty(HomeSearch,home)</onunload>
+    <onunload>ClearProperty(custom_label,virtualkeyboard)</onunload>
     <onunload>ClearProperty(Clear,virtualkeyboard)</onunload>
     <zorder>3</zorder>
     <controls>
@@ -42,6 +43,19 @@
                     <textcolor>Mod_Tags</textcolor>
                     <include>DialogHeaderMod</include>
                     <align>center</align>
+                    <visible>IsEmpty(Window.Property(custom_label))</visible>
+                </control>
+                <control type="label">
+                    <description>Dialog Header</description>
+                    <posx>36</posx>
+                    <posy>-75</posy>
+                    <width>1000</width>
+                    <height>22</height>
+                    <textcolor>Mod_Tags</textcolor>
+                    <include>DialogHeaderMod</include>
+                    <align>center</align>
+                    <visible>!IsEmpty(Window.Property(custom_label))</visible>
+                    <label>$INFO[Window.Property(custom_label)]</label>
                 </control>
                 <control type="label" id="310">
                     <description>Edit Text</description>
