@@ -3,6 +3,9 @@ Removed Aeon Nox backgrounds
 Fixed Panel home labels in widgets
 Fixed some widgets not showing for panel
 Made slideshow for system info custom
+Dialogkeyboard.xml can now take a custom_label property
+Use custom_label property to distinguish setting path from label
+Added preset items weather, update, clean and music videos
 
 [B]0.5.0[/B]
 GUI customisation of categories, widgets, submenus, backgrounds
